--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chai": "^3.5.0",
     "eslint": "^3.12.2",
     "mocha": "^3.2.0",
-    "onchange": "^3.2.1"
+    "onchange": "^3.2.1",
+    "sinon": "^1.17.6"
   }
 }
