--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-es2015": "^6.18.0",
     "chai": "^3.5.0",
     "eslint": "^3.12.2",
+    "eslint-config-airbnb-base": "^11.0.0",
     "mocha": "^3.2.0",
     "onchange": "^3.2.1",
     "sinon": "^1.17.6"
