--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -4,7 +4,8 @@ engines:
     config:
       languages:
       - ruby
-      - javascript
+      - javascript:
+          mass_threshold: 50
       - python
       - php
   eslint:
