--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "bugs": {
     "url": "https://github.com/Barry127/sontaran/issues"
   },
-  "homepage": "https://github.com/Barry127/sontaran#readme",
+  "homepage": "https://barry127.github.io/sontaran",
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
@@ -37,6 +37,7 @@
     "chai": "^3.5.0",
     "eslint": "^3.12.2",
     "eslint-config-airbnb-base": "^11.0.0",
+    "eslint-plugin-import": "^2.2.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "onchange": "^3.2.1",
