--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Javascript number, string, boolean, object validator",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf dist && babel src --out-dir dist",
+    "build": "rm -rf dist && eslint . && npm test && babel src --out-dir dist",
     "lint": "clear && eslint . || true",
     "lint:watch": "onchange \"**/*.js\" -- npm run lint",
     "prepublish": "npm run build",
