--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "sontaran",
   "version": "0.1.0",
   "description": "Javascript number, string, boolean, object validator",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && eslint . && npm test && babel src --out-dir dist",
-    "lint": "clear && eslint . || true",
+    "lint": "reset && eslint . || true",
     "lint:watch": "onchange \"**/*.js\" -- npm run lint",
-    "prepublish": "npm run build",
     "test": "mocha --recursive \"**/*.spec.js\"",
     "test:coverage": "istanbul cover _mocha \"**/*.spec.js\" -- -R spec",
     "test:watch": "npm run test -- --watch"
@@ -31,16 +29,13 @@
   },
   "homepage": "https://barry127.github.io/sontaran",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-preset-es2015": "^6.18.0",
     "chai": "^3.5.0",
-    "eslint": "^3.12.2",
-    "eslint-config-airbnb-base": "^11.0.0",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint": "^3.17.1",
+    "eslint-config-xo-space": "^0.15.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "onchange": "^3.2.1",
     "sinon": "^1.17.6"
-  }
+  },
+  "dependencies": {}
 }
