--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,7 +3,7 @@ engines:
     enabled: false
   eslint:
     enabled: true
-    channel: "eslint-3"
+    config: './.eslintrc.js'
   fixme:
     enabled: true
 ratings:
