--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "eslint-config-xo-space": "^0.15.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
-    "onchange": "^3.2.1",
-    "sinon": "^1.17.6"
+    "onchange": "^3.2.1"
   },
   "dependencies": {}
 }
