--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-node_modules
-npm-debug.log
-.todo
-coverage
-package-lock.json
+/node_modules
+
+/coverage
+
+/dist
+
+.DS_Store
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
