--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "typescript": "^4.0.2"
   },
   "jest": {
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "<rootDir>/src/_data"
+    ],
     "transform": {
       ".(ts|tsx)": "ts-jest"
     },
