--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
       "<rootDir>/src/_data"
     ],
     "transform": {
-      ".(ts|tsx)": "ts-jest"
+      ".(ts|tsx|json)": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
