--- a/package.json
+++ b/package.json
@@ -39,15 +39,14 @@
     "@types/jest": "^26.0.10",
     "coveralls": "^3.1.0",
     "docsify-cli": "^4.4.1",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^26.3.0"
-  },
-  "dependencies": {
     "jest": "^26.4.2",
+    "rimraf": "^3.0.2",
     "rollup": "^2.26.8",
     "rollup-plugin-typescript2": "^0.27.2",
+    "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
   },
+  "dependencies": {},
   "jest": {
     "coveragePathIgnorePatterns": [
       "/node_modules/",
